{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "e9f19d4b-b806-627c-031a-55caeca6941d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T07:40:59.613-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/mig-allow-http",
            "log_config": [],
            "name": "mig-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/mig-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/mig-allow-http",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "mig"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T07:40:59.545-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/mig-allow-ssh",
            "log_config": [],
            "name": "mig-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/mig-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/mig-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "mig"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/networks/mig-vpc",
            "mtu": 0,
            "name": "mig-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2438950237847559963",
            "project": "project-3e800f45-77e7-454a-a2b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/mig-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T07:41:00.526-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/project-3e800f45-77e7-454a-a2b/regions/us-central1/subnetworks/mig-subnet",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "mig-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/mig-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-3e800f45-77e7-454a-a2b",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/regions/us-central1/subnetworks/mig-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}